# SelfBalancingRobot

./: README.md
Arduino Nano code/PID_control/: PID_control.ino
CAD/: Motor_mount.SLDPRT  battery.SLDPRT  chassis_V1.SLDPRT  circuit.SLDPRT  motor.SLDPRT  robot_assembly.SLDASM  wheel.SLDPRT
CAD/STL/: chassis.STL
CAD/URDF_Tool_Export/robot_assembly.SLDASM/: CMakeLists.txt  package.xml
CAD/URDF_Tool_Export/robot_assembly.SLDASM/launch/: display.launch  gazebo.launch
CAD/URDF_Tool_Export/robot_assembly.SLDASM/meshes/: RightWheelLink.STL
CAD/URDF_Tool_Export/robot_assembly.SLDASM/urdf/: robot_assembly.SLDASM.csv  robot_assembly.SLDASM.urdf
Simscape/: battery_Default_sldprt.STEP  chassis_V1_Default_sldprt.STEP  circuit_Default_sldprt.STEP  motor_Default_sldprt.STEP  robot_assembly.slx  robot_assembly.slxc  robot_assembly_simscape_DataFile.m  wheel_Default_sldprt.STEP
Simscape/slprj/sim/varcache/robot_assembly/: checksumOfCache.mat  varInfo.mat
Simscape/slprj/sim/varcache/robot_assembly/tmwinternal/: simulink_cache.xml
robot_assembly/: CMakeLists.txt  package.xml
robot_assembly/config/: controller.yaml
robot_assembly/launch/: gazebo.launch  istagger_launch.launch
robot_assembly/meshes/: LeftWheelLink.STL  base_link.STL
robot_assembly/rviz/: config1.rviz
robot_assembly/src/: pid_controller.py
robot_assembly/temp/: PID_control.ino
robot_assembly/urdf/: robot_assembly.urdf
